Edited the text under the About heading so that it makes more sense.

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
           Every few weeks, we will have a theme that you are to paint or draw. You can paint/draw whatever you want,
           as long as it follows the <a href ="#rules">rules</a> and goes with the theme.
           We will meet weekly on Zoom every Friday for one hour at 3:00 p.m. These meetings will be where we all get to
-          know each other, discuss the aspects of art, share our work as well as differnet techniques and talk about the next theme.
+          know each other, discuss the aspects of art, share our work as well as differnet art techniques and talk about the next theme.
           These meetings will not be formal. They are meant to be friendly so that members can be comfortable around each other. A
           supervising teacher will be present in each meeting to make sure everything is flowing smoothly. She may or may not take part.
           Every meeting will be different, and therefore, it is very important for you to attend all of them and take part. Don't
