--- a/index.html
+++ b/index.html
@@ -1,15 +1,13 @@
 <!DOCTYPE html>
 <html>
-
   <head>
-
     <style>
 
       <!--Customize the CSS to change colors, fonts, whatever-->
       div.container {
         width: 100%;
         border: 1px solid gray;
-}
+      }
 
       header, footer {
         padding: 1em;
@@ -40,36 +38,31 @@
         max-width: 160px;
         margin: 0;
         padding: 1em;
-}
+      }
 
       nav ul {
         list-style-type: none;
         padding: 0;
-}
+      }
 
       nav ul a {
         text-decoration: none;
-}
+      }
 
       article {
         margin-left: 170px;
         border-left: 1px solid gray;
         padding: 1em;
         overflow: hidden;
-}
+      }
     </style>
-
   </head>
-
   <body>
-
     <div class="container">
-
       <header>
         <h1>Artists of the Lotus Flower</h1>
         <!--Use CSS to change the background color of this section-->
       </header>
-
       <nav>
         <ul>
           <li><a href ="#about"> About </a></li>
@@ -79,7 +72,6 @@
         </ul>
         <!--Use CSS to change the background color of this section-->
       </nav>
-
       <article>
         <h2 id ="about">About</h2>
         <img src="https://pbs.twimg.com/media/DHHrbulXgAEPfOG.jpg" width="600px" height="700px">
@@ -89,22 +81,20 @@
           Every few weeks, we will have a theme that you are to paint or draw. You can paint/draw whatever you want,
           as long as it follows the <a href ="#rules">rules</a> and goes with the theme.
           We will meet monthly on Zoom on a Friday for one hour at 3:00 p.m. These meetings will be where we all get to
-          know each other, discuss the aspects of art, share our work as well as differnet art techniques and talk about the next theme.
+          know each other, discuss the aspects of art, share our work as well as different art techniques and talk about the next theme.
           These meetings will not be formal. They are meant to be friendly so that members can be comfortable around each other. A
           supervising teacher will be present in each meeting to make sure everything is flowing smoothly. She may or may not take part.
           Every meeting will be different, and therefore, it is very important for you to attend all of them and take part. Don't
           be shy. It's OK if you don't know anything about art or if your work isn't great; just have fun and participate.
           Art isn't perfect anyway, and a good artist will <em>always</em> notice a flaw in their work...and try to fix it.
-          If you miss a meeting, you will be sent a summary of the meeting via email.
+          If you miss a meeting, you will be sent a summary of it via email.
         </p>
-
         <h2 id ="rules"> Rules of this Club</h2>
-        <p> Rules, as much as we don't always like or agree with them, are going to present in this club.
+        <p> Rules, as much as we don't always like or agree with them, are going to be present in this club.
           They are here to ensure the safety, privacy and happiness of the members. If you are not willing to follow these
           rules, then you will not be eligible to join the Artists of the Lotus Flower. Breaking these rules will result in your eviction
           from this club.</p>
         <ol>
-
           <li> Don't use major swear words. Words such as "stupid" and "silly" are tolerable as long as they are not directed to
             a club member, their family or their work. It is fine to give negative feedback, but don't use hurtful words and language.
             You have three chances regarding this rule.</li>
@@ -113,13 +103,12 @@
 
           <li> Don't plagiarise. The art you share should be your own. Don't just print someone else's work and say it's yours.
             It is fine to draw/paint a character that somebody else made up but you should be sure to mention that the character
-            you drew is not yours.</li>
-
-
+            you drew is not from your imagination.</li>
 
           <li>Including gore in your work is OK as long as it's not extreme.</li>
 
-          <li> Don't be spiteful. </li>
+          <li> Don't be spiteful. If you are going to give feedback on someone's work, don't only look at the bad parts of it.
+          </li>
 
           <li>Give evryone a chance to speak during meetings.</li>
         </ol>
@@ -134,11 +123,9 @@
         <p>This club is run by two high schoolers from Visions in Education Charter School; Madeeha Adam and Sameerah Rahman (co-leader).
         </p>
       </article>
-
       <footer>
         <!--Use CSS to change the background color of this section-->
       </footer>
-
     </div>
   </body>
 </html>
