Edited rule number 1 and 2.

--- a/index.html
+++ b/index.html
@@ -95,11 +95,9 @@
           rules, then you will not be eligible to join the Artists of the Lotus Flower. Breaking these rules will result in your eviction
           from this club.</p>
         <ol>
-          <li> Don't use major swear words. Words such as "stupid" and "silly" are tolerable as long as they are not directed to
-            a club member, their family or their work. It is fine to give negative feedback, but don't use hurtful words and language.
-            You have three chances regarding this rule.</li>
+          <li> Don't use major swear words.</li>
 
-          <li>Don't display sexual content in your artwork. You have two chances regarding this rule.</li>
+          <li>Don't display sexual content in your artwork.</li>
 
           <li> Don't plagiarise. The art you share should be your own. Don't just print someone else's work and say it's yours.
             It is fine to draw/paint a character that somebody else made up but you should be sure to mention that the character
