Changed vice president. Edited the introductory paragraph.

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
           know each other, discuss the aspects of art, share our work as well as different art techniques and talk about the next theme.
           These meetings will not be formal. They are meant to be friendly so that members can be comfortable around each other. A
           supervising teacher will be present in each meeting to make sure everything is flowing smoothly. She may or may not take part.
-          Every meeting will be different, and therefore, it is very important for you to attend all of them and take part. Don't
+          Every meeting will be different, and therefore, it is very important for you to attend all of them. Don't
           be shy. It's OK if you don't know anything about art or if your work isn't great; just have fun and participate.
           Art isn't perfect anyway, and a good artist will <em>always</em> notice a flaw in their work...and try to fix it.
           If you miss a meeting, you will be sent a summary of it via email.
@@ -116,7 +116,7 @@
 
           <li>Give evryone a chance to speak during meetings.</li>
         </ol>
-        <p>For now these are the only rules. More may be added if necessary.</p>
+        <p>For now, these are the only rules. More may be added if necessary.</p>
 
         <h2 id="join">Join the Artists of the Lotus Flower!</h2>
         <img src="https://imagebee.org/artistic/the_melancholy_of_haruhi_suzumiya_ii-wallpapers/the_melancholy_of_haruhi_suzumiya_ii-wallpaper-480x320.jpg" width="600px">
@@ -125,7 +125,7 @@
         <!--Use CSS to change the background color of this section-->
 
         <h2 id="leaders">Leaders:</h2>
-        <p>This club is run by two high schoolers from Visions in Education Charter School; Madeeha Adam and Sameerah Rahman (co-leader).
+        <p>This club is run by Madeeha Adam and Ella Keller and supervised by teacher Lily Nichols.
         </p>
       </article>
       <footer>
