Made copyright a class and not an id because it is called more than once.

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         font-size: 2em;
       }
 
-      #copyright {
+      .copyright {
         font-size: 18px;
       }
 
@@ -79,7 +79,7 @@
       <article>
         <h2 id ="about">About</h2>
         <img src="https://static.tvtropes.org/pmwiki/pub/images/rsz_anohana.png" width="600px">
-        <p id="copyright">Image belongs to <a href="https://www.google.com/url?sa=i&url=https%3A%2F%2Ftvtropes.org%2Fpmwiki%2Fpmwiki.php%2FAnime%2FAnoHanaTheFlowerWeSawThatDay&psig=AOvVaw0jwUSC0VpOXblURd-pZ0bM&ust=1633233921079000&source=images&cd=vfe&ved=0CAsQjRxqFwoTCPi7xtDsqvMCFQAAAAAdAAAAABAl">this website</a>
+        <p class="copyright">Image belongs to <a href="https://www.google.com/url?sa=i&url=https%3A%2F%2Ftvtropes.org%2Fpmwiki%2Fpmwiki.php%2FAnime%2FAnoHanaTheFlowerWeSawThatDay&psig=AOvVaw0jwUSC0VpOXblURd-pZ0bM&ust=1633233921079000&source=images&cd=vfe&ved=0CAsQjRxqFwoTCPi7xtDsqvMCFQAAAAAdAAAAABAl">this website</a>
         </p>
         <p>Welcome to Artists of the Lotus Flower!</p>
         <p>
@@ -120,7 +120,7 @@
 
         <h2 id="join">Join the Artists of the Lotus Flower!</h2>
         <img src="https://imagebee.org/artistic/the_melancholy_of_haruhi_suzumiya_ii-wallpapers/the_melancholy_of_haruhi_suzumiya_ii-wallpaper-480x320.jpg" width="600px">
-        <p id="copyright">Image belongs to <a href="https://www.google.com/url?sa=i&url=https%3A%2F%2Fimagebee.org%2Fartistic%2Fthe_melancholy_of_haruhi_suzumiya_ii-wallpapers%2F&psig=AOvVaw2-21X9qcUos1cuqLeiWebE&ust=1633234410298000&source=images&cd=vfe&ved=0CAsQjRxqFwoTCKixm7zuqvMCFQAAAAAdAAAAABAJ">this website</a></p>
+        <p class="copyright">Image belongs to <a href="https://www.google.com/url?sa=i&url=https%3A%2F%2Fimagebee.org%2Fartistic%2Fthe_melancholy_of_haruhi_suzumiya_ii-wallpapers%2F&psig=AOvVaw2-21X9qcUos1cuqLeiWebE&ust=1633234410298000&source=images&cd=vfe&ved=0CAsQjRxqFwoTCKixm7zuqvMCFQAAAAAdAAAAABAJ">this website</a></p>
         <p>Are you interested in joining us? Do you like to draw and/or paint? Do you want to learn about how to improve your artwork? Then fill out <a href="https://docs.google.com/forms/d/e/1FAIpQLScqkqca0vu0_wtvzgiE91bVsB58B0X4y5Dx992rEjvJwTKHWQ/viewform?vc=0&c=0&w=1&flr=0">this form</a> and you will hear from the leader, co-leader or supervising teacher within a couple of days.</p>
         <!--Use CSS to change the background color of this section-->
 
