Add gallery and guidelines pages. List council in index.

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
       nav {
         float: left;
-        max-width: 160px;
+        max-width: 210px;
         margin: 0;
         padding: 1em;
       }
@@ -64,15 +64,16 @@
   <body>
     <div class="container">
       <header>
-        <h1>Artists of the Lotus Flower</h1>
+        <h1>The Lotus Flower</h1>
         <!--Use CSS to change the background color of this section-->
       </header>
       <nav>
         <ul>
-          <li><a href ="#about"> About </a></li>
-          <li><a href="#rules"> Rules of this Club</a></li>
-          <li><a href="#join"> Join us!</a></li>
-          <li><a href="#leaders"> Leaders </a></li>
+          <li><a href ="#about">About</a></li>
+          <li><a href="#rules">Rules of this Club</a></li>
+          <li><a href="#join">Join us!</a></li>
+          <li><a href="#leaders">Council Members</a></li>
+          <li><a href="gallery.html">Art Gallery</a></li>
         </ul>
         <!--Use CSS to change the background color of this section-->
       </nav>
@@ -81,7 +82,7 @@
         <img src="https://static.tvtropes.org/pmwiki/pub/images/rsz_anohana.png" width="600px">
         <p class="copyright">Image belongs to <a href="https://www.google.com/url?sa=i&url=https%3A%2F%2Ftvtropes.org%2Fpmwiki%2Fpmwiki.php%2FAnime%2FAnoHanaTheFlowerWeSawThatDay&psig=AOvVaw0jwUSC0VpOXblURd-pZ0bM&ust=1633233921079000&source=images&cd=vfe&ved=0CAsQjRxqFwoTCPi7xtDsqvMCFQAAAAAdAAAAABAl">this website</a>
         </p>
-        <p>Welcome to Artists of the Lotus Flower!</p>
+        <p>Welcome to the Lotus Flower!</p>
         <p>
           This is a Visions in Education High School art club for drawing and painting.
           Every few weeks, we will have a theme that you are to paint or draw. You can paint/draw whatever you want,
@@ -98,7 +99,7 @@
         <h2 id ="rules"> Rules of this Club</h2>
         <p> Rules, as much as we don't always like or agree with them, are going to be present in this club.
           They are here to ensure the safety, privacy and happiness of the members. If you are not willing to follow these
-          rules, then you will not be eligible to join the Artists of the Lotus Flower. Breaking these rules will result in your eviction
+          rules, then you will not be eligible to join the Lotus Flower. Breaking these rules will result in your eviction
           from this club.</p>
         <ol>
           <li> Don't use major swear words.</li>
@@ -111,22 +112,27 @@
 
           <li>Including gore in your work is OK as long as it's not extreme.</li>
 
-          <li> Don't be spiteful. If you are going to give feedback on someone's work, don't only look at the bad parts of it.
+          <li> If you are going to give feedback on someone's work, say something useful that's related to art.
+            Here are some <a href="guidelines.html">guidelines</a> you should follow.
           </li>
 
           <li>Give evryone a chance to speak during meetings.</li>
         </ol>
         <p>For now, these are the only rules. More may be added if necessary.</p>
 
-        <h2 id="join">Join the Artists of the Lotus Flower!</h2>
-        <img src="https://imagebee.org/artistic/the_melancholy_of_haruhi_suzumiya_ii-wallpapers/the_melancholy_of_haruhi_suzumiya_ii-wallpaper-480x320.jpg" width="600px">
-        <p class="copyright">Image belongs to <a href="https://www.google.com/url?sa=i&url=https%3A%2F%2Fimagebee.org%2Fartistic%2Fthe_melancholy_of_haruhi_suzumiya_ii-wallpapers%2F&psig=AOvVaw2-21X9qcUos1cuqLeiWebE&ust=1633234410298000&source=images&cd=vfe&ved=0CAsQjRxqFwoTCKixm7zuqvMCFQAAAAAdAAAAABAJ">this website</a></p>
+        <h2 id="join">Join the Lotus Flower!</h2>
+        <img src="https://cache.desktopnexus.com/thumbseg/377/377347-bigthumbnail.jpg" width="600px">
+        <p class="copyright">Image belongs to <a href="https://www.desktopnexus.com/groups/anime-love-and-romance/image/377347/">this website</a></p>
         <p>Are you interested in joining us? Do you like to draw and/or paint? Do you want to learn about how to improve your artwork? Then fill out <a href="https://docs.google.com/forms/d/e/1FAIpQLScqkqca0vu0_wtvzgiE91bVsB58B0X4y5Dx992rEjvJwTKHWQ/viewform?vc=0&c=0&w=1&flr=0">this form</a> and you will hear from the leader, co-leader or supervising teacher within a couple of days.</p>
         <!--Use CSS to change the background color of this section-->
 
-        <h2 id="leaders">Leaders:</h2>
-        <p>This club is run by Madeeha Adam and Ella Keller and supervised by teacher Lily Nichols.
-        </p>
+        <h2 id="leaders">Council Members</h2>
+        <ul>
+          <li>President: Madeeha A.</li>
+          <li>Vice President: Ella K.</li>
+          <li>Secretary: Raianne E.</li>
+          <li>Supervising Teacher: Lily N.</li>
+        </ul>
       </article>
       <footer>
         <!--Use CSS to change the background color of this section-->
