Add web developer to council list. Include link to developer application form.

--- a/index.html
+++ b/index.html
@@ -131,6 +131,7 @@
           <li>President: Madeeha A.</li>
           <li>Vice President: Ella K.</li>
           <li>Secretary: Raianne E.</li>
+          <li>Web Developer: OPEN <a href="https://docs.google.com/forms/d/e/1FAIpQLScfi5QwbwljTtG5IyrwPZsaHPo-rkplv12TTcobJc1z3rBmFA/viewform?usp=sf_link">sign up for position now!</a></li>
           <li>Supervising Teacher: Lily N.</li>
         </ul>
       </article>
