Fix spelling error in rules list

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
             Here are some <a href="guidelines.html">guidelines</a> you should follow.
           </li>
 
-          <li>Give evryone a chance to speak during meetings.</li>
+          <li>Give everyone a chance to speak during meetings.</li>
         </ol>
         <p>For now, these are the only rules. More may be added if necessary.</p>
 
